--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["**/*.ts", "src/**/*.d.ts",
-      "src/types/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["**/*.ts", "src/**/*.d.ts", "src/types/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "compileOnSave": false
 }
