--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-VITE_SOME_KEY=123
 # 打包路径 根据项目不同按需配置
-VITE_BASE_URL = ./
+VITE_BASE_URL = /master/ # 默认为：./
+# 代理服务器
+VITE_PROXY_HOST = https://yzsafe.kejiajia.net
+
+# 上传文件URL
+VITE_UPLOADFILE_URL = /base/upFiles/upload
