--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "pinia-plugin-persistedstate": "^2.1.1",
     "qrcode.vue": "^3.2.2",
     "qs": "^6.10.5",
-    "tdesign-icons-vue-next": "^0.1.1",
+    "tdesign-icons-vue-next": "^0.1.4",
     "tdesign-vue-next": "^0.24.5",
     "tvision-color": "^1.3.1",
     "vue": "^3.2.31",
@@ -69,6 +69,7 @@
     "typescript": "~4.8.4",
     "vite": "^2.7.1",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-pwa": "^0.12.3",
     "vite-svg-loader": "^3.1.0",
     "vue-tsc": "^1.0.8"
   },
@@ -80,12 +81,10 @@
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "prettier --write",
-      "npm run lint:fix",
-      "git add ."
+      "npm run lint:fix"
     ],
     "*.{html,vue,vss,sass,less}": [
-      "npm run stylelint:fix",
-      "git add ."
+      "npm run stylelint:fix"
     ]
   }
 }
